--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
         <div class="row">
             <div class="col-12 mt-5 text-center heading">
                 <h1>About <span class="me-span">me</span></h1>
-                <p class="sub-heading">I love coding! <span class="secondary-heading">Yes, I mean it!</span></p>
+                <p class="sub-heading text-center">I love coding! <span class="secondary-heading">Yes, I mean it!</span></p>
               </div>
             <div class="col-12">
                 <div class="row">
