Add email address to maintenance page

--- a/maintenance.html
+++ b/maintenance.html
@@ -19,7 +19,7 @@
 						<p>&gt; Work on someting special for the site</p>
 						  <p class="error-stage">&gt; Disable maintenance mode <span id="error-box">█</span>
 					</div>
-					<p class="text-center description">I am performing some maintenance at the moment. If you need you can always <a href="#" class="contact-link">contact me</a>, otherwise I'll be back online shortly.</p>
+					<p class="text-center description">I am performing some maintenance at the moment. If you need you can always <a href="mailto:salmanazeez15@gmail.com.com" class="contact-link">contact me</a>, otherwise I'll be back online shortly.</p>
 				</div>
 			</div>
 		</div>
