--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
-  <title>Salman Azeez | Web Designer</title>
+  <title>Salman Azeez | Web Developer</title>
   <link rel="shortcut icon" href="img/favicon.png">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css/navigation.css">
@@ -45,8 +45,8 @@
         </div>
         <p class="mt-4">My name is Salman Azeez. I'm a Front-End/Web Developer from Kandy, Sri Lanka.</p>
         <div class="col-sm-6 col-md-12">
-          <button class="btn btn-danger portfolio mt-3">Portfolio</button>
-          <button class="btn btn-outline-light contact mt-3">Contact me</button>
+          <a href="maintenance.html"><button class="btn btn-danger portfolio mt-3">Portfolio</button></a>
+          <a href="about.html"></a><button class="btn btn-outline-light contact mt-3">About me</button>
         </div>
       </div>
     </div>
