--- a/about.html
+++ b/about.html
@@ -40,19 +40,15 @@
             <div class="col-12 mt-5 text-center heading">
                 <h1>About <span class="me-span">me</span></h1>
                 <p class="sub-heading text-center">I love coding! <span class="secondary-heading">Yes, I mean it!</span></p>
-              </div>
-            <div class="col-12">
-                <div class="row">
-                    <div class="col-sm-12 col-md-4 p-5 text-center">
-                        <img src="img/about/mine.JPG" class="img-fluid" alt="placeholder">
-                    </div>
-                    <div class="col-sm-12 col-md-8 p-3 p-md-5">
-                        <p>My name is Salman Azeez. I'm a Web Developer from Kandy, Sri Lanka. I am specialized in front-end development. I tend to code things from scratch and enjoy bringing ideas to life in the browser. I love to create and build websites and applications which are high quality responsive and exceptional user experience. I'm quietly confident, naturally curious, and perpetually improving my chops. I also have some fairly good knowledge of Web Design. I write code and improve my design and skills every day. I am unaware of every language and framework but it only takes me a proper documentation to cope with. I compel myself to explore and learn new things each day.</p>
-                        <p>While I'm not debugging some code or trying to position elements right, I love to hang out with my friends, play video games, listen to music, watch movies, eat pizza etc. I am obsessed with <span class="friends">F<span class="dot1">.</span>R<span class="dot2">.</span>I<span class="dot3">.</span>E<span class="dot4">.</span>N<span class="dot5">.</span>D<span class="dot6">.</span>S</span> TV series.</p>
-                        <div class="resume-download">
-                            <a href="pdf/Salman Azeez.pdf" target="_blank"><button type="button" class="btn btn-danger">Download resume <span class="fa fa-download"></span></button></a>
-                        </div>
-                    </div>
+            </div>
+            <div class="col-sm-12 col-md-4 p-5 text-center">
+                <img src="img/about/mine.JPG" class="img-fluid" alt="placeholder">
+            </div>
+            <div class="col-sm-12 col-md-8 p-3 p-md-5 introduction-text">
+                <p>My name is Salman Azeez. I'm a Web Developer from Kandy, Sri Lanka. I am specialized in front-end development. I tend to code things from scratch and enjoy bringing ideas to life in the browser. I love to create and build websites and applications which are high quality responsive and exceptional user experience. I'm quietly confident, naturally curious, and perpetually improving my chops. I also have some fairly good knowledge of Web Design. I write code and improve my design and skills every day. I am unaware of every language and framework but it only takes me a proper documentation to cope with. I compel myself to explore and learn new things each day.</p>
+                <p>While I'm not debugging some code or trying to position elements right, I love to hang out with my friends, play video games, listen to music, watch movies, eat pizza etc. I am obsessed with <span class="friends">F<span class="dot1">.</span>R<span class="dot2">.</span>I<span class="dot3">.</span>E<span class="dot4">.</span>N<span class="dot5">.</span>D<span class="dot6">.</span>S</span> TV series.</p>
+                <div class="resume-download">
+                    <a href="pdf/Salman Azeez.pdf" target="_blank"><button type="button" class="btn btn-danger">Download resume <span class="fa fa-download"></span></button></a>
                 </div>
             </div>
         </div>
