Fix issue on about btn on home page

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <p class="mt-4">My name is Salman Azeez. I'm a Front-End/Web Developer from Kandy, Sri Lanka.</p>
         <div class="col-sm-6 col-md-12">
           <a href="maintenance.html"><button class="btn btn-danger portfolio mt-3">Portfolio</button></a>
-          <a href="about.html"></a><button class="btn btn-outline-light contact mt-3">About me</button></a>
+          <a href="about.html"><button class="btn btn-outline-light contact mt-3">About me</button></a>
         </div>
       </div>
     </div>
