Fix portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
                     <div class="card" id="product-card">
                         <div class="image-overlay" class="d-none d-sm-block"></div>
                         <a href="#" id="view_details" class="d-none d-sm-block">View details</a>
-                        <img src="bubble.jpg" class="card-img-top" alt="Project card image">
+                        <img src="img/portfolio/bubble.jpg" class="card-img-top" alt="Project card image">
                         <div class="card-body">
                             <h5 class="card-title project-name">Card title</h5>
                             <p class="card-text job-role">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -31,7 +31,7 @@
                     <div class="card" id="product-card">
                         <div class="image-overlay" class="d-none d-sm-block"></div>
                         <a href="#" id="view_details" class="d-none d-sm-block">View details</a>
-                        <img src="bubble.jpg" class="card-img-top" alt="Project card image">
+                        <img src="img/portfolio/bubble.jpg" class="card-img-top" alt="Project card image">
                         <div class="card-body">
                             <h5 class="card-title project-name">Card title</h5>
                             <p class="card-text job-role">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -46,7 +46,7 @@
                     <div class="card" id="product-card">
                         <div class="image-overlay" class="d-none d-sm-block"></div>
                         <a href="#" id="view_details" class="d-none d-sm-block">View details</a>
-                        <img src="bubble.jpg" class="card-img-top" alt="Project card image">
+                        <img src="img/portfolio/bubble.jpg" class="card-img-top" alt="Project card image">
                         <div class="card-body">
                             <h5 class="card-title project-name">Card title</h5>
                             <p class="card-text job-role">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -61,7 +61,7 @@
                     <div class="card" id="product-card">
                         <div class="image-overlay" class="d-none d-sm-block"></div>
                         <a href="#" id="view_details" class="d-none d-sm-block">View details</a>
-                        <img src="bubble.jpg" class="card-img-top" alt="Project card image">
+                        <img src="img/portfolio/bubble.jpg" class="card-img-top" alt="Project card image">
                         <div class="card-body">
                             <h5 class="card-title project-name">Card title</h5>
                             <p class="card-text job-role">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -76,10 +76,10 @@
 
     <div class="profile-link-container d-flex justify-content-center">
         <div class="row">
-            <h3 class="col-12 text-center p-3">News</h3>
-            <div class="col-12 text-center">
+            <h3 class="col-12 text-center p-3">Online communities</h3>
+            <div class="col-12 text-center mb-4">
                 <a href="#" class="p-3">
-                    <img src="linkedin.png">
+                    <img src="img/portfolio/linkedin.png">
                 </a>
                 <a href="#" class="p-3">
                     <img src="img/portfolio/codepen.png">
