Add css and fix contact page

--- a/contact.html
+++ b/contact.html
@@ -12,23 +12,23 @@
         <div class="row">
             <!-- Contact form -->
             <div class="col-12 col-md-5 card-container">
-                <div class="card text-center mx-auto border-0 shadow-lg mb-5 bg-white rounded">
+                <div class="card text-center mx-auto mb-5 rounded">
                     <div class="card-body">
-                        <h1 class="heading">Contact me</h1>
-                        <h6 class="card-subtitle mb-2 text-muted">Use the form to contact me or use the email address to drop me an email. Old-fashioned phone calls work too but I am an introvert. I am down to any sort of questions like about web development, deep conversations, what you should name your kitten... anything I can help with.</h6>
-                        <form class="text-left">
+                        <h1 class="heading p-2">Contact <span class="me-span">me</span></h1>
+                        <h6 class="card-subtitle mb-2 text-muted">Old-fashioned phone calls work too but I am an introvert. I am down to any sort of questions like about web development, deep conversations, what you should name your kitten... anything I can help you with.</h6>
+                        <form class="text-left" action="https://formspree.io/xgeejwpk" method="POST">
                             <div class="form-group">
                                 <label>Name</label>
-                                <input type="text" class="form-control" placeholder="Your name">
+                                <input type="text" class="form-control" name="Name" placeholder="Your name" required>
                             </div>
                             <div class="form-group">
                                     <label for="exampleInputEmail1">Email</label>
-                                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Your email">
+                                    <input type="email" class="form-control" name="Reply to" aria-describedby="emailHelp" placeholder="Your email" required>
                                     <small id="emailHelp" class="form-text text-muted">I'll never share your email with anyone else.</small>
                             </div>
                             <div class="form-group">
                                 <label>Your message</label>
-                                <textarea rows="4" cols="50" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Your message here"></textarea>
+                                <textarea rows="4" cols="50" class="form-control" aria-describedby="emailHelp" name="Message" placeholder="Your message here" required></textarea>
                             </div>
                             <button type="submit" class="btn btn-danger w-25 h-25">Send</button>
                         </form>
@@ -43,14 +43,15 @@
 
                 <!-- Social media links -->
                 <div class="weblinks-container col-12 p-3">
+                        <h4 class="text-center p-3 weblink-title">On the web</h4>
                     <a href="https://www.instagram.com/salman_azeez/?hl=en" target="_blank" class="weblink-logo">
-                        <img class="weblink-logo-img" src="instagram.png">
+                        <img class="weblink-logo-img" src="img/contact/instagram.png">
                     </a>
                     <a href="#" target="_blank" class="weblink-logo">
-                        <img class="weblink-logo-img" src="facebook.png">
+                        <img class="weblink-logo-img" src="img/contact/facebook.png">
                     </a>
                     <a href="https://twitter.com/SalmanAzeez9" target="_blank" class="weblink-logo">
-                        <img class="weblink-logo-img" src="twitter.png">
+                        <img class="weblink-logo-img" src="img/contact/twitter.png">
                     </a>
                 </div>
             </div>
