--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,7 @@
 
     <div class="profile-link-container d-flex justify-content-center">
         <div class="row">
-            <h3 class="col-12 text-center p-3">Online communities</h3>
+            <h4 class="col-12 text-center p-3 social-media-links">Online communities</h4>
             <div class="col-12 text-center mb-4">
                 <a href="#" class="p-3">
                     <img src="img/portfolio/linkedin.png">
