--- a/contact.html
+++ b/contact.html
@@ -5,58 +5,86 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="img/favicon.png">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/navigation.css">
     <link rel="stylesheet" href="css/contact.css" type="text/css">
 </head>
 <body>
-    <div class="contact-page-container d-flex justify-content-center">
-        <div class="row">
-            <!-- Contact form -->
-            <div class="col-12 col-md-5 card-container">
-                <div class="card text-center mx-auto mb-5 rounded">
-                    <div class="card-body">
-                        <h1 class="heading p-2">Contact <span class="me-span">me</span></h1>
-                        <h6 class="card-subtitle mb-2 text-muted">Old-fashioned phone calls work too but I am an introvert. I am down to any sort of questions like about web development, deep conversations, what you should name your kitten... anything I can help you with.</h6>
-                        <form class="text-left" action="https://formspree.io/xgeejwpk" method="POST">
-                            <div class="form-group">
-                                <label>Name</label>
-                                <input type="text" class="form-control" name="Name" placeholder="Your name" required>
-                            </div>
-                            <div class="form-group">
-                                    <label for="exampleInputEmail1">Email</label>
-                                    <input type="email" class="form-control" name="Reply to" aria-describedby="emailHelp" placeholder="Your email" required>
-                                    <small id="emailHelp" class="form-text text-muted">I'll never share your email with anyone else.</small>
-                            </div>
-                            <div class="form-group">
-                                <label>Your message</label>
-                                <textarea rows="4" cols="50" class="form-control" aria-describedby="emailHelp" name="Message" placeholder="Your message here" required></textarea>
-                            </div>
-                            <button type="submit" class="btn btn-danger w-25 h-25">Send</button>
-                        </form>
+    <!-- Navigation bar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
+        <a class="navbar-brand" href="index.html"><img src="img/logo.png"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about.html">About me</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="maintenance.html">Portfolio</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="contact.html">Contact me</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <!-- Contact form container and texts -->
+    <section>
+        <div class="contact-page-container d-flex justify-content-center">
+            <div class="row">
+                <!-- Contact form -->
+                <div class="col-12 col-md-5 card-container">
+                    <h1 class="heading p-2">Contact <span class="me-span">me</span></h1>
+                    <div class="card text-center mx-auto mb-5 rounded">
+                        <div class="card-body">
+                            <p class="card-subtitle mb-2 text-muted">Old-fashioned phone calls work too but I am an introvert. I am down to any sort of questions like about web development, deep conversations, what you should name your kitten... anything I can help you with.</p>
+                            <form class="text-left" action="https://formspree.io/xgeejwpk" method="POST">
+                                <div class="form-group">
+                                    <label>Name</label>
+                                    <input type="text" class="form-control" name="Name" placeholder="Your name" required>
+                                </div>
+                                <div class="form-group">
+                                        <label for="exampleInputEmail1">Email</label>
+                                        <input type="email" class="form-control" name="Reply to" aria-describedby="emailHelp" placeholder="Your email" required>
+                                        <small id="emailHelp" class="form-text text-muted">I'll never share your email with anyone else.</small>
+                                </div>
+                                <div class="form-group">
+                                    <label>Your message</label>
+                                    <textarea rows="4" cols="50" class="form-control" aria-describedby="emailHelp" name="Message" placeholder="Your message here" required></textarea>
+                                </div>
+                                <button type="submit" class="btn btn-danger w-25 h-25">Send</button>
+                            </form>
+                        </div>
                     </div>
-                </div>
 
-                <!-- Contact details -->
-                <div class="col-12 text-center">
-                    <p><strong>Ring me: </strong><a href="tel:+94750467460">(+94) 75 0467 460</a></p>
-                    <p><strong>Email: </strong><a href="mailto:salmanazeez15@gmail.com.com">salmanazeez15@gmail.com</a></p>
-                </div>
+                    <!-- Contact details -->
+                    <div class="col-12 text-center">
+                        <p><strong>Ring me: </strong><a href="tel:+94750467460">(+94) 75 0467 460</a></p>
+                        <p><strong>Email: </strong><a href="mailto:salmanazeez15@gmail.com.com">salmanazeez15@gmail.com</a></p>
+                    </div>
 
-                <!-- Social media links -->
-                <div class="weblinks-container col-12 p-3">
-                        <h4 class="text-center p-3 weblink-title">On the web</h4>
-                    <a href="https://www.instagram.com/salman_azeez/?hl=en" target="_blank" class="weblink-logo">
-                        <img class="weblink-logo-img" src="img/contact/instagram.png">
-                    </a>
-                    <a href="#" target="_blank" class="weblink-logo">
-                        <img class="weblink-logo-img" src="img/contact/facebook.png">
-                    </a>
-                    <a href="https://twitter.com/SalmanAzeez9" target="_blank" class="weblink-logo">
-                        <img class="weblink-logo-img" src="img/contact/twitter.png">
-                    </a>
+                    <!-- Social media links -->
+                    <div class="weblinks-container col-12 p-3">
+                            <h4 class="text-center p-3 weblink-title">On the web</h4>
+                        <a href="https://www.instagram.com/salman_azeez/?hl=en" target="_blank" class="weblink-logo">
+                            <img class="weblink-logo-img" src="img/contact/instagram.png">
+                        </a>
+                        <a href="#" target="_blank" class="weblink-logo">
+                            <img class="weblink-logo-img" src="img/contact/facebook.png">
+                        </a>
+                        <a href="https://twitter.com/SalmanAzeez9" target="_blank" class="weblink-logo">
+                            <img class="weblink-logo-img" src="img/contact/twitter.png">
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
 	<!-- Scripts -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
