Deploy contact page to the site and add links to contact page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <a class="nav-link" href="maintenance.html">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="maintenance.html">Contact me</a>
+          <a class="nav-link" href="contact.html">Contact me</a>
         </li>
       </ul>
     </div>
@@ -46,7 +46,7 @@
         <p class="mt-4">My name is Salman Azeez. I'm a Front-End/Web Developer from Kandy, Sri Lanka.</p>
         <div class="col-sm-6 col-md-12">
           <a href="maintenance.html"><button class="btn btn-danger portfolio mt-3">Portfolio</button></a>
-          <a href="about.html"><button class="btn btn-outline-light contact mt-3">About me</button></a>
+          <a href="contact.html"><button class="btn btn-outline-light contact mt-3">Contact me</button></a>
         </div>
       </div>
     </div>
