--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
                     <a class="nav-link" href="maintenance.html">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="maintenance.html">Contact me</a>
+                    <a class="nav-link" href="contact.html">Contact me</a>
                 </li>
             </ul>
         </div>
