Remove left and right border on form box on contact page

--- a/contact.html
+++ b/contact.html
@@ -39,8 +39,8 @@
             <div class="row">
                 <!-- Contact form -->
                 <div class="col-12 col-md-5 card-container">
-                    <h1 class="heading p-2">Contact <span class="me-span">me</span></h1>
-                    <div class="card text-center mx-auto mb-5 rounded">
+                    <h1 class="heading p-5 text-center">Contact <span class="me-span">me</span></h1>
+                    <div class="card text-center mx-auto mb-5">
                         <div class="card-body">
                             <p class="card-subtitle mb-2 text-muted">Old-fashioned phone calls work too but I am an introvert. I am down to any sort of questions like about web development, deep conversations, what you should name your kitten... anything I can help you with.</p>
                             <form class="text-left" action="https://formspree.io/xgeejwpk" method="POST">
@@ -57,7 +57,7 @@
                                     <label>Your message</label>
                                     <textarea rows="4" cols="50" class="form-control" aria-describedby="emailHelp" name="Message" placeholder="Your message here" required></textarea>
                                 </div>
-                                <button type="submit" class="btn btn-danger w-25 h-25">Send</button>
+                                <button type="submit" class="btn btn-primary w-25 h-25">Send</button>
                             </form>
                         </div>
                     </div>
