Add white color social media logos

--- a/contact.html
+++ b/contact.html
@@ -57,13 +57,13 @@
                                     <label>Your message</label>
                                     <textarea rows="4" cols="50" class="form-control" aria-describedby="emailHelp" name="Message" placeholder="Your message here" required></textarea>
                                 </div>
-                                <button type="submit" class="btn btn-primary w-25 h-25">Send</button>
+                                <button type="submit" class="btn btn-danger w-25 h-25">Send</button>
                             </form>
                         </div>
                     </div>
 
                     <!-- Contact details -->
-                    <div class="col-12 text-center">
+                    <div class="col-12 text-center additional-links">
                         <p><strong>Ring me: </strong><a href="tel:+94750467460">(+94) 75 0467 460</a></p>
                         <p><strong>Email: </strong><a href="mailto:salmanazeez15@gmail.com.com">salmanazeez15@gmail.com</a></p>
                     </div>
