Add paddings to contact form btn

--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
                                     <label>Your message</label>
                                     <textarea rows="4" cols="50" class="form-control" aria-describedby="emailHelp" name="Message" placeholder="Your message here" required></textarea>
                                 </div>
-                                <button type="submit" class="btn btn-danger w-25 h-25">Send</button>
+                                <button type="submit" class="btn btn-danger w-25 h-25 p-2">Send</button>
                             </form>
                         </div>
                     </div>
