--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
                 <a href="#">
                     <div class="card" id="product-card">
                         <div class="image-overlay" class="d-none d-sm-block"></div>
-                        <a href="#" id="view_details" class="d-none d-sm-block">View details</a>
+                        <a href="#" id="view_details" class="d-none d-sm-block">View project</a>
                         <img src="img/portfolio/bubble.jpg" class="card-img-top" alt="Project card image">
                         <div class="card-body">
                             <h5 class="card-title project-name">Card title</h5>
@@ -27,6 +27,21 @@
                 </a>
             </div>
             <div class="col-12 col-md-6 card-container">
+                <a href="#">
+                    <div class="card" id="product-card">
+                        <div class="image-overlay" class="d-none d-sm-block"></div>
+                        <a href="#" id="view_details" class="d-none d-sm-block">View project</a>
+                        <img src="img/portfolio/bubble.jpg" class="card-img-top" alt="Project card image">
+                        <div class="card-body">
+                            <h5 class="card-title project-name">Card title</h5>
+                            <p class="card-text job-role">This card has supporting text below as a natural lead-in to additional content.</p>
+                            <p class="card-text project-tech-title">Technologies</p>
+                            <span class="card-text project-technologies">Bootstrap, SASS and Laravel</span>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <!-- <div class="col-12 col-md-6 card-container">
                 <a href="#">
                     <div class="card" id="product-card">
                         <div class="image-overlay" class="d-none d-sm-block"></div>
@@ -55,44 +70,29 @@
                         </div>
                     </div>
                 </a>
-            </div>
-            <div class="col-12 col-md-6 card-container">
-                <a href="#">
-                    <div class="card" id="product-card">
-                        <div class="image-overlay" class="d-none d-sm-block"></div>
-                        <a href="#" id="view_details" class="d-none d-sm-block">View details</a>
-                        <img src="img/portfolio/bubble.jpg" class="card-img-top" alt="Project card image">
-                        <div class="card-body">
-                            <h5 class="card-title project-name">Card title</h5>
-                            <p class="card-text job-role">This card has supporting text below as a natural lead-in to additional content.</p>
-                            <p class="card-text project-tech-title">Technologies</p>
-                            <span class="card-text project-technologies">Bootstrap, SASS and Laravel</span>
-                        </div>
-                    </div>
-                </a>
-            </div>
+            </div> -->
         </div>
     </section>
 
-    <div class="profile-link-container d-flex justify-content-center">
+    <!-- <div class="profile-link-container d-flex justify-content-center">
         <div class="row">
             <h4 class="col-12 text-center p-3 social-media-links">Online communities</h4>
             <div class="col-12 text-center mb-4">
-                <a href="#" class="p-3">
+                <a href="https://lk.linkedin.com/in/salman-azeez-4a2017136" class="p-3">
                     <img src="img/portfolio/linkedin.png">
                 </a>
-                <a href="#" class="p-3">
+                <a href="https://codepen.io/salman-azeez" class="p-3">
                     <img src="img/portfolio/codepen.png">
                 </a>
-                <a href="#" class="p-3">
+                <a href="https://github.com/salmanazeez" class="p-3">
                     <img src="img/portfolio/github.png">
                 </a>
-                <a href="#" class="p-3">
+                <a href="https://bitbucket.org/salmanazeez/" class="p-3">
                     <img src="img/portfolio/bitbucket.png">
                 </a>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
