Partially design project page

--- a/projects/project.html
+++ b/projects/project.html
@@ -8,17 +8,27 @@
 	<link rel="stylesheet" type="text/css" href="../css/project-page.css">
 </head>
 <body>
-	<div class="row">
+	<div class="row p-3 p-md-5">
 		<div class="col-12 text-center">
 			<h1>Sustainable Tourism</h1>
 			<p class="sub-heading text-center">General <span class="secondary-heading">article</span></p>
 		</div>
 	</div>
 
-	<section>
+	<section class="p-3 p-md-5">
 		<div class="row">
 			<div class="col-12">
-				<p></p>
+				<p>It was important to understand how our developers build our designs so I started learning our development. For front-end we used React. Previously I worked mainly with HTML and CSS so I had to learn more Javascript.</p>
+				<p>There were some visual guidelines created by my teammates but there was dedicated time to building a design system. Understanding React and how it affects to modularization helped me to translate the visual guidelines to variables and to better align components.</p>
+				<h6>View web application: <a href="#" class="live-link">businesstoday.lk</a></h6>
+			</div>
+		</div>
+	</section>
+
+	<section class="p-3 p-md-5">
+		<div class="row">
+			<div class="col-12">
+
 			</div>
 		</div>
 	</section>
