--- a/projects/project.html
+++ b/projects/project.html
@@ -5,9 +5,35 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" href="img/favicon.png">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="../css/navigation.css">
 	<link rel="stylesheet" type="text/css" href="../css/project-page.css">
 </head>
 <body>
+	<!-- Navigation bar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
+		<a class="navbar-brand" href="index.html"><img src="../img/logo.png"></a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+			<ul class="navbar-nav">
+				<li class="nav-item">
+					<a class="nav-link" href="index.html">Home</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="about.html">About me</a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="maintenance.html">Portfolio</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="contact.html">Contact me</a>
+				</li>
+			</ul>
+		</div>
+	</nav>
+
+	<!-- Project heading -->
 	<div class="row p-3 p-md-5">
 		<div class="col-12 text-center">
 			<h1>Sustainable Tourism</h1>
@@ -15,6 +41,7 @@
 		</div>
 	</div>
 
+	<!-- Project description -->
 	<section class="p-3 p-md-5">
 		<div class="row">
 			<div class="col-12">
@@ -25,6 +52,7 @@
 		</div>
 	</section>
 
+	<!-- Project screenshots -->
 	<section class="p-3 p-md-5">
 		<div class="row">
 			<div class="col-12">
