Update project page texts

--- a/projects/project.html
+++ b/projects/project.html
@@ -36,8 +36,8 @@
 	<!-- Project heading -->
 	<div class="row p-3 p-md-5">
 		<div class="col-12 text-center">
-			<h1>Sustainable Tourism</h1>
-			<p class="sub-heading text-center">General <span class="secondary-heading">article</span></p>
+			<h1>A dialogue with the village</h1>
+			<p class="sub-heading text-center">Web <span class="secondary-heading">Application</span></p>
 		</div>
 	</div>
 
@@ -47,7 +47,7 @@
 			<div class="col-12">
 				<p>It was important to understand how our developers build our designs so I started learning our development. For front-end we used React. Previously I worked mainly with HTML and CSS so I had to learn more Javascript.</p>
 				<p>There were some visual guidelines created by my teammates but there was dedicated time to building a design system. Understanding React and how it affects to modularization helped me to translate the visual guidelines to variables and to better align components.</p>
-				<h6>View web application: <a href="#" class="live-link">businesstoday.lk</a></h6>
+				<h6>View web application: <a href="https://www.gamasamaga.com/en/home" class="live-link">gamasamaga.com</a></h6>
 			</div>
 		</div>
 	</section>
