--- a/portfolio.html
+++ b/portfolio.html
@@ -16,17 +16,17 @@
                     <div class="card" id="product-card">
                         <div class="image-overlay" class="d-none d-sm-block"></div>
                         <a href="#" id="view_details" class="d-none d-sm-block">View project</a>
-                        <img src="img/portfolio/bubble.jpg" class="card-img-top" alt="Project card image">
+                        <img src="img/portfolio/gamasamaga.jpg" class="card-img-top" alt="Project card image">
                         <div class="card-body">
-                            <h5 class="card-title project-name">Card title</h5>
-                            <p class="card-text job-role">This card has supporting text below as a natural lead-in to additional content.</p>
+                            <h5 class="card-title project-name">A dialogue with the village</h5>
+                            <p class="card-text job-role">Junior Web Developer</p>
                             <p class="card-text project-tech-title">Technologies</p>
-                            <span class="card-text project-technologies">Bootstrap, SASS and Laravel</span>
+                            <span class="card-text project-technologies">Angular 8, Anugular Material, AWS, Ruby on Rails</span>
                         </div>
                     </div>
                 </a>
             </div>
-            <div class="col-12 col-md-6 card-container">
+            <!-- <div class="col-12 col-md-6 card-container">
                 <a href="#">
                     <div class="card" id="product-card">
                         <div class="image-overlay" class="d-none d-sm-block"></div>
@@ -40,7 +40,7 @@
                         </div>
                     </div>
                 </a>
-            </div>
+            </div> -->
             <!-- <div class="col-12 col-md-6 card-container">
                 <a href="#">
                     <div class="card" id="product-card">
