Add path to gamasamaga project

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,10 +12,10 @@
     <section class="p-md-5 d-flex justify-content-center card-section">
         <div class="row">
             <div class="col-12 col-md-6 card-container">
-                <a href="#">
+                <a href="projects/project.html">
                     <div class="card" id="product-card">
                         <div class="image-overlay" class="d-none d-sm-block"></div>
-                        <a href="#" id="view_details" class="d-none d-sm-block">View project</a>
+                        <a href="projects/project.html" id="view_details" class="d-none d-sm-block">View project</a>
                         <img src="img/portfolio/gamasamaga.jpg" class="card-img-top" alt="Project card image">
                         <div class="card-body">
                             <h5 class="card-title project-name">A dialogue with the village</h5>
