--- a/projects/gamasamaga.html
+++ b/projects/gamasamaga.html
@@ -45,8 +45,8 @@
 	<section class="p-3 p-md-5">
 		<div class="row">
 			<div class="col-12">
-				<p>It was important to understand how our developers build our designs so I started learning our development. For front-end we used React. Previously I worked mainly with HTML and CSS so I had to learn more Javascript.</p>
-				<p>There were some visual guidelines created by my teammates but there was dedicated time to building a design system. Understanding React and how it affects to modularization helped me to translate the visual guidelines to variables and to better align components.</p>
+				<p>It was important to understand how my senior developer build our designs so I started learning our development. For front-end we used Angular and Angular Material. Previously I worked mainly with HTML and CSS so I had to learn more Javascript.</p>
+				<p>There were some visual guidelines created by my teammate but there was dedicated time to building a design system. Understanding Angular and how it affects to modularization helped me to translate the visual guidelines to variables and to better align components.</p>
 				<h6>View web application: <a href="https://www.gamasamaga.com/en/home" class="live-link">gamasamaga.com</a></h6>
 			</div>
 		</div>
@@ -56,7 +56,12 @@
 	<section class="p-3 p-md-5">
 		<div class="row">
 			<div class="col-12">
-
+				<img src="../img/gamasamaga/home.png" class="img-fluid" alt="Frameworks and technologies">
+				<img src="../img/gamasamaga/about.png" class="img-fluid" alt="Frameworks and technologies">
+				<img src="../img/gamasamaga/idea1.png" class="img-fluid" alt="Frameworks and technologies">
+				<img src="../img/gamasamaga/idea2.png" class="img-fluid" alt="Frameworks and technologies">
+				<img src="../img/gamasamaga/proposal.png" class="img-fluid" alt="Frameworks and technologies">
+				<img src="../img/gamasamaga/profile.png" class="img-fluid" alt="Frameworks and technologies">
 			</div>
 		</div>
 	</section>
