Add target tag to portfolio and project file

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,16 +33,16 @@
         <div class="row">
             <h4 class="col-12 text-center p-3 social-media-links">Online communities</h4>
             <div class="col-12 text-center mb-4">
-                <a href="https://lk.linkedin.com/in/salman-azeez-4a2017136" class="p-3">
+                <a href="https://lk.linkedin.com/in/salman-azeez-4a2017136" class="p-3" target="_blank">
                     <img src="img/portfolio/linkedin.png">
                 </a>
-                <a href="https://codepen.io/salman-azeez" class="p-3">
+                <a href="https://codepen.io/salman-azeez" class="p-3" target="_blank">
                     <img src="img/portfolio/codepen.png">
                 </a>
-                <a href="https://github.com/salmanazeez" class="p-3">
+                <a href="https://github.com/salmanazeez" class="p-3" target="_blank">
                     <img src="img/portfolio/github.png">
                 </a>
-                <a href="https://bitbucket.org/salmanazeez/" class="p-3">
+                <a href="https://bitbucket.org/salmanazeez/" class="p-3" target="_blank">
                     <img src="img/portfolio/bitbucket.png">
                 </a>
             </div>
