--- a/projects/gamasamaga.html
+++ b/projects/gamasamaga.html
@@ -41,6 +41,12 @@
 		</div>
 	</div>
 
+	<div class="row text-center">
+		<div class="col-12">
+			<img src="../img/gamasamaga/device-image.png" class="img-fluid" alt="Screenshot of website in a laptop screen">
+		</div>
+	</div>
+
 	<!-- Project description -->
 	<section class="p-3 p-md-5">
 		<div class="row">
@@ -56,12 +62,12 @@
 	<section class="p-3 p-md-5">
 		<div class="row">
 			<div class="col-12">
-				<img src="../img/gamasamaga/home.png" class="img-fluid" alt="Frameworks and technologies">
-				<img src="../img/gamasamaga/about.png" class="img-fluid" alt="Frameworks and technologies">
-				<img src="../img/gamasamaga/idea1.png" class="img-fluid" alt="Frameworks and technologies">
-				<img src="../img/gamasamaga/idea2.png" class="img-fluid" alt="Frameworks and technologies">
-				<img src="../img/gamasamaga/proposal.png" class="img-fluid" alt="Frameworks and technologies">
-				<img src="../img/gamasamaga/profile.png" class="img-fluid" alt="Frameworks and technologies">
+				<img src="../img/gamasamaga/home.png" class="img-fluid" alt="Screenshot of the website">
+				<img src="../img/gamasamaga/about.png" class="img-fluid" alt="Screenshot of the website">
+				<img src="../img/gamasamaga/idea1.png" class="img-fluid" alt="Screenshot of the website">
+				<img src="../img/gamasamaga/idea2.png" class="img-fluid" alt="Screenshot of the website">
+				<img src="../img/gamasamaga/proposal.png" class="img-fluid" alt="Screenshot of the website">
+				<img src="../img/gamasamaga/profile.png" class="img-fluid" alt="Screenshot of the website">
 			</div>
 		</div>
 	</section>
