--- a/works.html
+++ b/works.html
@@ -1,22 +1,47 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Portfolio</title>
+    <title>Works | Salman Azeez</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="img/favicon.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="css/portfolio.css" rel="stylesheet" type="text/css">
+    <link href="css/works.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" type="text/css" href="css/navigation.css">
 </head>
 <body>
+    <!-- Navigation bar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
+        <a class="navbar-brand" href="index.html"><img src="img/logo.png"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="about.html">About me</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="works.html">Works</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact me</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
     <!-- Cards -->
     <section class="p-md-5 d-flex justify-content-center card-section">
         <div class="row">
             <div class="col-12 col-md-6 card-container">
-                <a href="projects/gamasamaga.html">
+                <a href="maintenance.html">
                     <div class="card" id="product-card">
                         <div class="image-overlay" class="d-none d-sm-block"></div>
-                        <a href="projects/gamasamaga.html" id="view_details" class="d-none d-sm-block">View project</a>
-                        <img src="img/portfolio/gamasamaga.jpg" class="card-img-top" alt="Project card image">
+                        <a href="maintenance.html" id="view_details" class="d-none d-sm-block">View project</a>
+                        <img src="img/works/gamasamaga.jpg" class="card-img-top" alt="Project card image">
                         <div class="card-body">
                             <h5 class="card-title project-name">A dialogue with the village</h5>
                             <p class="card-text job-role">Junior Web Developer</p>
@@ -34,16 +59,16 @@
             <h4 class="col-12 text-center p-3 social-media-links">Online communities</h4>
             <div class="col-12 text-center mb-4">
                 <a href="https://lk.linkedin.com/in/salman-azeez-4a2017136" class="p-3" target="_blank">
-                    <img src="img/portfolio/linkedin.png">
+                    <img src="img/works/linkedin.png">
                 </a>
                 <a href="https://codepen.io/salman-azeez" class="p-3" target="_blank">
-                    <img src="img/portfolio/codepen.png">
+                    <img src="img/works/codepen.png">
                 </a>
                 <a href="https://github.com/salmanazeez" class="p-3" target="_blank">
-                    <img src="img/portfolio/github.png">
+                    <img src="img/works/github.png">
                 </a>
                 <a href="https://bitbucket.org/salmanazeez/" class="p-3" target="_blank">
-                    <img src="img/portfolio/bitbucket.png">
+                    <img src="img/works/bitbucket.png">
                 </a>
             </div>
         </div>
