--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
                     <a class="nav-link" href="about.html">About me</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="maintenance.html">Portfolio</a>
+                    <a class="nav-link" href="works.html">Works</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact me</a>
