--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <a class="nav-link" href="about.html">About me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="maintenance.html">Portfolio</a>
+          <a class="nav-link" href="works.html">Works</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact me</a>
@@ -45,7 +45,7 @@
         </div>
         <p class="mt-4">My name is Salman Azeez. I'm a Front-End/Web Developer from Kandy, Sri Lanka.</p>
         <div class="col-sm-6 col-md-12">
-          <a href="maintenance.html"><button class="btn btn-danger portfolio mt-3">Portfolio</button></a>
+          <a href="maintenance.html"><button class="btn btn-danger works mt-3">Works</button></a>
           <a href="contact.html"><button class="btn btn-outline-light contact mt-3">Contact me</button></a>
         </div>
       </div>
