--- a/projects/gamasamaga.html
+++ b/projects/gamasamaga.html
@@ -18,16 +18,16 @@
 		<div class="collapse navbar-collapse justify-content-center" id="navbarNav">
 			<ul class="navbar-nav">
 				<li class="nav-item">
-					<a class="nav-link" href="index.html">Home</a>
+					<a class="nav-link" href="../index.html">Home</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="about.html">About me</a>
+					<a class="nav-link" href="../about.html">About me</a>
 				</li>
 				<li class="nav-item active">
-					<a class="nav-link" href="maintenance.html">Portfolio</a>
+					<a class="nav-link" href="../works.html">Works</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="contact.html">Contact me</a>
+					<a class="nav-link" href="../contact.html">Contact me</a>
 				</li>
 			</ul>
 		</div>
