Fix home page works btn path

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
         <p class="mt-4">My name is Salman Azeez. I'm a Front-End/Web Developer from Kandy, Sri Lanka.</p>
         <div class="col-sm-6 col-md-12">
-          <a href="maintenance.html"><button class="btn btn-danger works mt-3">Works</button></a>
+          <a href="works.html"><button class="btn btn-danger works mt-3">Works</button></a>
           <a href="contact.html"><button class="btn btn-outline-light contact mt-3">Contact me</button></a>
         </div>
       </div>
