--- a/works.html
+++ b/works.html
@@ -37,10 +37,10 @@
     <section class="p-md-5 d-flex justify-content-center card-section">
         <div class="row">
             <div class="col-12 col-md-6 card-container">
-                <a href="maintenance.html">
+                <a href="projects/gamasamaga.html">
                     <div class="card" id="product-card">
                         <div class="image-overlay" class="d-none d-sm-block"></div>
-                        <a href="maintenance.html" id="view_details" class="d-none d-sm-block">View project</a>
+                        <a href="projects/gamasamaga.html" id="view_details" class="d-none d-sm-block">View project</a>
                         <img src="img/works/gamasamaga.jpg" class="card-img-top" alt="Project card image">
                         <div class="card-body">
                             <h5 class="card-title project-name">A dialogue with the village</h5>
