--- a/projects/gamasamaga.html
+++ b/projects/gamasamaga.html
@@ -34,12 +34,14 @@
 	</nav>
 
 	<!-- Project heading -->
-	<div class="row p-3 p-md-5">
-		<div class="col-12 text-center">
-			<h1>A dialogue with the village</h1>
-			<p class="sub-heading secondary-text text-center">Junior Web <span class="dev-span">Developer</span></p>
+	<section class="p-3 p-md-5">
+		<div class="row">
+			<div class="col-12 text-center">
+				<h1>A dialogue with the village</h1>
+				<p class="sub-heading secondary-text text-center">Junior Web <span class="dev-span">Developer</span></p>
+			</div>
 		</div>
-	</div>
+	</section>
 
 	<div class="row text-center">
 		<div class="col-12">
@@ -77,7 +79,7 @@
 	<section class="p-3 p-md-5">
 		<div class="row">
 			<div class="col-12">
-				<h3>Technologies and tools</h3>
+				<h5>Technologies and tools</h5>
 				<p class="secondary-text">Angular, Angular Material, Ruby on Rails, AWS, MongoDB, GitKraken, VS Code</p>
 			</div>
 		</div>
