Update texts on gamasamaga and about page

--- a/about.html
+++ b/about.html
@@ -166,7 +166,7 @@
             </div>
             <div class="col-12">
                 <p class="secondary-text hideme">February 2019 - Present</p>
-                <hp>I started my career as a fresher after my graduation. Joined as trainee web developer and have learnt about the industry. I was in-charge of company websites. Later on I worked as a junior front-end developer on a web application with my senior. Currently working as a web developer on our new project.</hp>
+                <hp>I started my career as a fresher after my graduation. Joined as trainee web developer and have learnt about the industry. I was in-charge of company websites. Later on I worked as a junior web developer on a web application with my senior. Currently working as a web developer on our new project.</hp>
             </div>
             <div class="col-4 container-divider mt-4 mb-4"></div>
         </div>
