--- a/projects/gamasamaga.html
+++ b/projects/gamasamaga.html
@@ -55,7 +55,7 @@
 			<div class="col-12">
 				<p>It was important to understand how my senior developer build our designs so I started learning our development. For front-end we used Angular and Angular Material and for back-end we used Ruby on Rails. Previously for front-end, I worked mainly with HTML and CSS and for back-end I workder with PHP so I had to learn more Javascript and Ruby on Rails.</p>
 				<p>There were some visual guidelines created by my teammate but there was dedicated time to building a design system. Understanding Angular and how it affects to modularization helped me to translate the visual guidelines to variables and to better align components.</p>
-				<h6>View web application: <a href="https://www.gamasamaga.com/en/home" class="live-link" target="_blank">gamasamaga.com</a></h6>
+				<h6><strong>View web application: </strong><a href="https://www.gamasamaga.com/en/home" class="live-link" target="_blank">gamasamaga.com</a></h6>
 			</div>
 		</div>
 	</section>
