Fix gamasamaga page

--- a/projects/gamasamaga.html
+++ b/projects/gamasamaga.html
@@ -3,7 +3,7 @@
 <head>
 	<title>A dialogue with the village</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="shortcut icon" href="img/favicon.png">
+	<link rel="shortcut icon" href="../img/favicon.png">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="../css/navigation.css">
 	<link rel="stylesheet" type="text/css" href="../css/project-page.css">
@@ -43,11 +43,13 @@
 		</div>
 	</section>
 
-	<div class="row text-center">
-		<div class="col-12">
-			<img src="../img/gamasamaga/laptop-image.png" class="img-fluid" alt="Screenshot of website in a laptop screen">
+	<section>
+		<div class="row text-center">
+			<div class="col-12">
+				<img src="../img/gamasamaga/laptop-image.png" class="img-fluid" alt="Screenshot of website in a laptop screen">
+			</div>
 		</div>
-	</div>
+	</section>
 
 	<!-- Project description -->
 	<section class="p-3 p-md-5">
