--- a/projects/gamasamaga.html
+++ b/projects/gamasamaga.html
@@ -3,6 +3,8 @@
 <head>
 	<title>A dialogue with the village</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="This is a web application project which was done using Angular, Angular Material and RUby on Rails.">
+  	<meta name="keywords" content="angular, angularjs, angularJS, angular material, rub, ruby on rails, aws, javascript, web application, web development">
 	<link rel="shortcut icon" href="../img/favicon.png">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="../css/navigation.css">
