--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,8 @@
 <head>
     <title>Contact me | Salman Azeez</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="I am avaialbe anytime of the day so you can reach me through anyway you wiash to contact me. Let's get in touch.">
+    <meta name="keywords" content="web developer, web application, frontend, frontend developer, contact me, contact, conversation">
     <link rel="shortcut icon" href="img/favicon.png">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/navigation.css">
