Add twitter card for gamasamaga project

--- a/projects/gamasamaga.html
+++ b/projects/gamasamaga.html
@@ -3,8 +3,17 @@
 <head>
 	<title>A dialogue with the village</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="og:A dialogue with the village" property="og:title" content="A dialogue with the village">
+	<meta property="og:image" content="../img/gamasamaga/home.jpg">
 	<meta name="description" content="This is a web application project which was done using Angular, Angular Material and RUby on Rails.">
-  	<meta name="keywords" content="angular, angularjs, angularJS, angular material, rub, ruby on rails, aws, javascript, web application, web development">
+	<meta name="keywords" content="angular, angularjs, angularJS, angular material, rub, ruby on rails, aws, javascript, web application, web development">
+
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:url" content="https://salmanazeez.github.io/projects/gamasamaga.html">
+	<meta name="twitter:title" content="A dialogue with the village: Web Application">
+	<meta name="twitter:description" content="A web application which helps people around the country to reach SLPP political party and give them ideas on how to build the country for better future. People now can write a digital form on what are the needs for their country or places.">
+	<meta name="twitter:image" content="../img/gamasamaga/home.jpg">
+
 	<link rel="shortcut icon" href="../img/favicon.png">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="../css/navigation.css">
