--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html class="animated fadeIn">
 <head>
-  <title>Salman Azeez | Web Developer</title>
+  <title>Web Developer | Front-End Developer</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="This is a personal portfolio website of mine. This website contains all the details of me and the projecs I have worked on.">
+  <meta name="description" content="This is a personal portfolio website of mine. This portfolio website contains all the details of me and the projecs I have worked on.">
   <meta name="keywords" content="web developer, web application, frontend, frontend developer, ui, software, software engineer">
   <link rel="shortcut icon" href="img/favicon.png">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
