--- a/works.html
+++ b/works.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Personal Portfolio | Salman Azeez</title>
+    <title>Personal Portfolio | Web Developer | Front-End Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Projects which are done and dusted. These projects will give an idea of me.">
+    <meta name="description" content="Projects which are done and dusted. There were Angular, Ruby on Rails, Laravel, etc... project I have worked and this page includes all of them. These projects will give an idea of me.">
     <meta name="keywords" content="portfolio, works, projects, experiences, web applications, frameworks">
     <link rel="shortcut icon" href="img/favicon.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
