--- a/projects/gamasamaga.html
+++ b/projects/gamasamaga.html
@@ -13,6 +13,8 @@
 	<meta name="twitter:title" content="A dialogue with the village: Web Application">
 	<meta name="twitter:description" content="A web application which helps people around the country to reach SLPP political party and give them ideas on how to build the country for better future. People now can write a digital form on what are the needs for their country or places.">
 	<meta name="twitter:image" content="../img/gamasamaga/home.jpg">
+	<meta name="twitter:image:width" content="600">
+	<meta name="twitter:image:height" content="600">
 
 	<link rel="shortcut icon" href="../img/favicon.png">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
