--- a/projects/gamasamaga.html
+++ b/projects/gamasamaga.html
@@ -12,7 +12,7 @@
 	<meta name="twitter:url" content="https://salmanazeez.github.io/projects/gamasamaga.html">
 	<meta name="twitter:title" content="A dialogue with the village: Web Application">
 	<meta name="twitter:description" content="A web application which helps people around the country to reach SLPP political party and give them ideas on how to build the country for better future. People now can write a digital form on what are the needs for their country or places.">
-	<meta name="twitter:image" content="../img/gamasamaga/home.jpg">
+	<meta name="twitter:image" content="https://salmanazeez.github.io/img/gamasamaga/home.jpg">
 	<meta name="twitter:image:width" content="600">
 	<meta name="twitter:image:height" content="600">
 
