Add twitter card to home page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="This is a personal portfolio website of mine. This portfolio website contains all the details of me and the projecs I have worked on.">
   <meta name="keywords" content="web developer, web application, frontend, frontend developer, ui, software, software engineer">
+  <!-- Twitter card -->
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:url" content="https://salmanazeez.github.io">
+	<meta name="twitter:title" content="Personal portfolio website">
+	<meta name="twitter:description" content="This is my personal portfolio website which is a static website. It is built using HTML5, CSS3, JavaScript and Bootstrap.">
+	<meta name="twitter:image" content="img/body.jpg">
+	<meta name="twitter:image:width" content="600">
+  <meta name="twitter:image:height" content="600">
+  <!-- Resource links -->
   <link rel="shortcut icon" href="img/favicon.png">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css/navigation.css">
