--- a/projects/gamasamaga.html
+++ b/projects/gamasamaga.html
@@ -7,7 +7,7 @@
 	<meta property="og:image" content="../img/gamasamaga/home.jpg">
 	<meta name="description" content="This is a web application project which was done using Angular, Angular Material and RUby on Rails.">
 	<meta name="keywords" content="angular, angularjs, angularJS, angular material, rub, ruby on rails, aws, javascript, web application, web development">
-
+	<!-- Twitter card -->
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:url" content="https://salmanazeez.github.io/projects/gamasamaga.html">
 	<meta name="twitter:title" content="A dialogue with the village: Web Application">
@@ -15,7 +15,7 @@
 	<meta name="twitter:image" content="https://salmanazeez.github.io/img/gamasamaga/home.jpg">
 	<meta name="twitter:image:width" content="600">
 	<meta name="twitter:image:height" content="600">
-
+	<!-- Resource links -->
 	<link rel="shortcut icon" href="../img/favicon.png">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="../css/navigation.css">
