Fix twitter card image on home page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="twitter:url" content="https://salmanazeez.github.io">
 	<meta name="twitter:title" content="Personal portfolio website">
 	<meta name="twitter:description" content="This is my personal portfolio website which is a static website. It is built using HTML5, CSS3, JavaScript and Bootstrap.">
-	<meta name="twitter:image" content="img/body.jpg">
+	<meta name="twitter:image" content="https://salmanazeez.github.io/img/body.jpg">
 	<meta name="twitter:image:width" content="600">
   <meta name="twitter:image:height" content="600">
   <!-- Resource links -->
