Add Open Graph meta tag to gamasamaga project

--- a/projects/gamasamaga.html
+++ b/projects/gamasamaga.html
@@ -4,7 +4,8 @@
 	<title>A dialogue with the village</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="og:A dialogue with the village" property="og:title" content="A dialogue with the village">
-	<meta property="og:image" content="../img/gamasamaga/home.jpg">
+	<meta name="og:A dialogue with the village" property="og:url" content="https://salmanazeez.github.io/projects/gamasamaga.html">
+	<meta property="og:image" content="https://salmanazeez.github.io/img/gamasamaga/home.jpg">
 	<meta name="description" content="This is a web application project which was done using Angular, Angular Material and RUby on Rails.">
 	<meta name="keywords" content="angular, angularjs, angularJS, angular material, rub, ruby on rails, aws, javascript, web application, web development">
 	<!-- Twitter card -->
