Update Open Graph meta tags on gamasamaga

--- a/projects/gamasamaga.html
+++ b/projects/gamasamaga.html
@@ -3,6 +3,8 @@
 <head>
 	<title>A dialogue with the village</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta property="og:title" content="A dialogue with the village">
+	<meta property="og:description" content="A web application which helps people around the country to reach SLPP political party and give them ideas on how to build the country for better future. People now can write a digital form on what are the needs for their country or places." />
 	<meta name="og:A dialogue with the village" property="og:title" content="A dialogue with the village">
 	<meta name="og:A dialogue with the village" property="og:url" content="https://salmanazeez.github.io/projects/gamasamaga.html">
 	<meta property="og:image" content="https://salmanazeez.github.io/img/gamasamaga/home.jpg">
